--- a/react-ui/src/styles/containers/_charsArea.scss
+++ b/react-ui/src/styles/containers/_charsArea.scss
@@ -1,6 +1,6 @@
 #chars-area {
 padding-top: 15px;
-flex: 2 0 0;
+flex: 0 0 305px;
 padding-right: 10px;
 }
 
