--- a/react-ui/src/styles/containers/_textEditor.scss
+++ b/react-ui/src/styles/containers/_textEditor.scss
@@ -1,6 +1,6 @@
 #text-editor {
 padding-top: 15px;
-flex: 4 0 0;
+flex: 0 0 600px;
 display: flex;
 flex-direction: column;
 }
