--- a/react-ui/src/styles/containers/_wordsArea.scss
+++ b/react-ui/src/styles/containers/_wordsArea.scss
@@ -1,6 +1,6 @@
 #words-area {
 padding-top: 15px;
-flex: 2 0 0;
+flex: 0 0 305px;
 padding-left: 10px;
 padding-right: 20px;
 }
